Bug 1514581 - Don't use async streams with FileMediaResource. r=jya, a=RyanVM